tests/NormalTests/paczka1/fuzzy1/69178682.err
Error in line 1: pfnXr4zD9zm S552 33,3
Error in line 8: xNjl33LFg S803 52,43
Error in line 6: S503 A716 66,1
Error in line 13: pfnXr4zD9zm S503 67,5
Error in line 14: S503 S552 70,8
Error in line 18: S503 S503 16,3
Error in line 19: S503 A716 99,2
Error in line 10: xNjl33LFg S803 213,9
Error in line 36: ncqvvn S503 6,6
